Fix loading SVG with omitted commands

SVG supports omitting repeating command names. When checking for the
next command we should make sure we parse a case when it starts not
with a digit, but with a '.' sign.

BUG:406124